feat: 콘텐츠 보강 작업 진행 중 - 중간 체크포인트 (Backend DevOps/Java)
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RJToj5NnvXrAxG3zJqB2HK